# distribution-fitting

./: .gitignore  README.md  distribuciones.json  main.py  pyproject.toml
src/: ajuste.py  distribuciones.py  estadisticas.py  visualizacion.py
src/pruebas/: anderson.py  chi.py  ks.py  selector.py
tests/: test_anderson.py  test_chi.py  test_distribuciones.py  test_ks.py
