[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "distribution-fitting"
version = "0.2.0"
description = "Flexible distribution fitting tool"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
